--- a/index.html
+++ b/index.html
@@ -1,319 +1,399 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Caffi Ceirw — Golden Grove (Gelli Aur)</title>
+  <meta name="description" content="Caffi Ceirw — small family-run café at Golden Grove (Gelli Aur) Country Park." />
 
-<title>Caffi Ceirw | Golden Grove Country Park</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --green:#0f2b1f;
+      --green2:#174534;
+      --brown:#5a3e25;
+      --paper:#f6f1e8;
+      --ink:#141414;
+      --muted: rgba(20,20,20,.74);
+      --radius: 16px;
+      --max: 980px;
+      --shadow: 0 18px 48px rgba(0,0,0,.18);
+    }
 
-<style>
-:root{
-  --green:#0f2b1f;
-  --green-soft:#244a38;
-  --brown:#5a3e25;
-  --brown-dark:#3f2a18;
-  --cream:#f3efe6;
-  --paper:#fffdf9;
-  --ink:#141414;
-}
+    *{box-sizing:border-box}
+    html{scroll-behavior:smooth}
+    body{
+      margin:0;
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      background: var(--paper);
+      color: var(--ink);
+      line-height:1.55;
+    }
+    a{color:inherit; text-decoration:none}
+    .container{width:min(var(--max), calc(100% - 36px)); margin:0 auto;}
 
-*{box-sizing:border-box}
-body{
-  margin:0;
-  font-family:Inter, system-ui, sans-serif;
-  background:var(--cream);
-  color:var(--ink);
-  line-height:1.6;
-}
+    /* Header */
+    header{
+      position: sticky;
+      top: 0;
+      z-index: 30;
+      background: rgba(15,43,31,.92);
+      backdrop-filter: blur(10px);
+      border-bottom: 2px solid rgba(90,62,37,.55);
+    }
+    .header-inner{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap: 14px;
+      padding: 12px 0;
+    }
+    .brand{
+      display:flex;
+      align-items:center;
+      gap: 12px;
+      min-width: 220px;
+      color:#fff;
+    }
+    .brand img{
+      height: 52px;
+      width: auto;
+      display:block;
+      border-radius: 10px;
+      background: rgba(255,255,255,.08);
+      padding: 6px;
+      border: 1px solid rgba(255,255,255,.14);
+    }
+    nav{display:flex; gap: 14px; flex-wrap:wrap; justify-content:center;}
+    nav a{
+      font-size: 13px;
+      font-weight: 650;
+      color: rgba(255,255,255,.90);
+      padding: 7px 9px;
+      border-radius: 12px;
+      transition: 160ms ease;
+    }
+    nav a:hover{background: rgba(90,62,37,.45);}
+    .actions{display:flex; gap: 10px; align-items:center;}
+    .btn{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      padding: 10px 12px;
+      border-radius: 14px;
+      font-size: 13px;
+      font-weight: 750;
+      border: 1px solid rgba(255,255,255,.18);
+      background: rgba(255,255,255,.10);
+      color:#fff;
+      white-space:nowrap;
+      transition:160ms ease;
+    }
+    .btn:hover{transform: translateY(-1px);}
+    .btn.primary{
+      border-color: rgba(203,179,142,.40);
+      background: linear-gradient(135deg, rgba(90,62,37,.95), rgba(63,42,24,.95));
+    }
 
-.container{
-  max-width:960px;
-  margin:0 auto;
-  padding:0 20px;
-}
+    /* Hero with your watercolor interior as background */
+    .hero{
+      position: relative;
+      min-height: 64vh;
+      display:flex;
+      align-items:flex-end;
+      border-bottom: 2px solid rgba(90,62,37,.30);
 
-header{
-  background:var(--green);
-  color:#fff;
-  border-bottom:3px solid var(--brown);
-}
+      background-image: url("assets/ceirwintwatercol.jpg");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+    .hero::before{
+      content:"";
+      position:absolute;
+      inset:0;
+      /* soft overlay to make text readable */
+      background:
+        linear-gradient(180deg, rgba(15,43,31,.20) 0%, rgba(15,43,31,.78) 72%, rgba(15,43,31,.92) 100%);
+    }
+    .hero-inner{
+      position: relative;
+      width: 100%;
+      padding: 34px 0 34px;
+    }
 
-.header-inner{
-  display:flex;
-  align-items:center;
-  gap:16px;
-  padding:16px 0;
-}
+    .hero-card{
+      max-width: 660px;
+      border-radius: var(--radius);
+      background: rgba(246,241,232,.88);
+      border: 1px solid rgba(90,62,37,.35);
+      box-shadow: var(--shadow);
+      padding: 18px 18px;
+    }
+    .pill{
+      display:inline-flex;
+      gap:8px;
+      align-items:center;
+      padding: 6px 10px;
+      border-radius: 999px;
+      background: rgba(15,43,31,.10);
+      border: 1px solid rgba(15,43,31,.18);
+      color: var(--green);
+      font-size: 12px;
+      font-weight: 800;
+    }
+    h1{
+      margin: 10px 0 8px;
+      font-family: Fraunces, Georgia, serif;
+      font-size: 34px;
+      line-height: 1.08;
+      color: var(--green);
+      letter-spacing:-.02em;
+    }
+    .hero-card p{
+      margin: 0;
+      color: var(--muted);
+      font-size: 14px;
+      max-width: 60ch;
+    }
+    .hero-ctas{
+      margin-top: 14px;
+      display:flex;
+      gap: 10px;
+      flex-wrap:wrap;
+    }
+    .btn2{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      padding: 10px 12px;
+      border-radius: 14px;
+      font-size: 13px;
+      font-weight: 750;
+      border: 1px solid rgba(15,43,31,.22);
+      background: rgba(255,255,255,.78);
+      color: var(--green);
+      transition:160ms ease;
+    }
+    .btn2.primary{
+      background: linear-gradient(135deg, var(--green2), var(--green));
+      color:#fff;
+      border-color: rgba(15,43,31,.35);
+    }
+    .btn2:hover{transform: translateY(-1px);}
 
-.logo{
-  height:60px;
-}
+    /* Sections */
+    section{padding: 34px 0;}
+    .section-head{
+      display:flex;
+      align-items:flex-end;
+      justify-content:space-between;
+      gap: 14px;
+      flex-wrap:wrap;
+      margin-bottom: 12px;
+    }
+    .section-head h2{
+      margin:0;
+      font-family: Fraunces, Georgia, serif;
+      font-size: 24px;
+      color: var(--green);
+    }
+    .section-head p{
+      margin:0;
+      color: var(--muted);
+      font-size: 13.5px;
+      max-width: 70ch;
+    }
 
-nav{
-  margin-left:auto;
-  display:flex;
-  gap:18px;
-}
+    .grid{
+      display:grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 12px;
+      margin-top: 14px;
+    }
+    .card{
+      border-radius: var(--radius);
+      background: rgba(255,255,255,.70);
+      border: 1px solid rgba(15,43,31,.14);
+      padding: 14px;
+    }
+    .card h3{
+      margin: 0 0 6px;
+      font-family: Fraunces, Georgia, serif;
+      font-size: 18px;
+      color: var(--brown);
+    }
+    .card p{margin:0; color: rgba(20,20,20,.72); font-size: 13.5px;}
 
-nav a{
-  color:#fff;
-  font-size:14px;
-  text-decoration:none;
-  font-weight:600;
-}
+    /* Wood-ish menu strip */
+    .menu-strip{
+      border-top: 1px solid rgba(90,62,37,.35);
+      border-bottom: 1px solid rgba(90,62,37,.35);
+      background:
+        repeating-linear-gradient(
+          90deg,
+          rgba(255,255,255,.05) 0px,
+          rgba(255,255,255,.05) 1px,
+          rgba(0,0,0,.03) 8px,
+          rgba(0,0,0,.03) 14px
+        ),
+        linear-gradient(135deg, rgba(90,62,37,.95), rgba(63,42,24,.95));
+      color:#fff;
+    }
+    .menu-box{
+      margin-top: 14px;
+      border-radius: var(--radius);
+      background: rgba(0,0,0,.18);
+      border: 1px solid rgba(255,255,255,.18);
+      padding: 14px;
+      max-width: 720px;
+    }
+    .menu-item{
+      padding: 10px 0;
+      border-bottom: 1px dashed rgba(255,255,255,.28);
+      font-size: 14px;
+    }
+    .menu-item:last-child{border-bottom:none}
 
-nav a:hover{
-  text-decoration:underline;
-}
+    footer{
+      background: rgba(15,43,31,.95);
+      color: rgba(255,255,255,.82);
+      border-top: 2px solid rgba(90,62,37,.55);
+      padding: 18px 0;
+      font-size: 12.5px;
+    }
 
-.hero{
-  padding:40px 0 30px;
-  background:
-    radial-gradient(900px at 20% 0%, rgba(36,74,56,.25), transparent 60%),
-    radial-gradient(900px at 80% 40%, rgba(90,62,37,.25), transparent 60%);
-}
-
-.hero h1{
-  font-family:Fraunces, serif;
-  font-size:40px;
-  color:var(--green);
-  margin-bottom:10px;
-}
-
-.hero p{
-  max-width:640px;
-  color:#333;
-  font-size:15px;
-}
-
-.hero-actions{
-  margin-top:18px;
-  display:flex;
-  gap:12px;
-}
-
-.btn{
-  padding:10px 16px;
-  border-radius:6px;
-  border:2px solid var(--green);
-  background:var(--green);
-  color:#fff;
-  font-weight:600;
-  font-size:14px;
-  text-decoration:none;
-}
-
-.btn.alt{
-  background:transparent;
-  color:var(--green);
-}
-
-.section{
-  padding:36px 0;
-}
-
-.section h2{
-  font-family:Fraunces, serif;
-  font-size:26px;
-  color:var(--green);
-  margin-bottom:8px;
-}
-
-.section p{
-  max-width:680px;
-  font-size:14px;
-}
-
-.image-block{
-  margin:26px 0;
-  border:6px solid var(--brown);
-  background:var(--paper);
-  box-shadow:0 18px 40px rgba(0,0,0,.15);
-  overflow:hidden;
-}
-
-.image-block img{
-  width:100%;
-  display:block;
-
-  /* ARTIST / SKETCH EFFECT */
-  filter:
-    grayscale(15%)
-    contrast(1.15)
-    brightness(1.05)
-    saturate(0.9);
-}
-
-.image-caption{
-  background:linear-gradient(135deg,var(--brown),var(--brown-dark));
-  color:#fff;
-  padding:10px 14px;
-  font-size:13px;
-  font-style:italic;
-}
-
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:16px;
-  margin-top:20px;
-}
-
-.card{
-  background:var(--paper);
-  border-left:6px solid var(--green);
-  padding:16px;
-}
-
-.card h3{
-  font-family:Fraunces, serif;
-  font-size:18px;
-  margin-bottom:6px;
-  color:var(--brown);
-}
-
-.wood{
-  background:
-    repeating-linear-gradient(
-      90deg,
-      rgba(255,255,255,.05) 0px,
-      rgba(255,255,255,.05) 1px,
-      rgba(0,0,0,.02) 8px,
-      rgba(0,0,0,.02) 14px
-    ),
-    linear-gradient(135deg,var(--brown),var(--brown-dark));
-  color:#fff;
-}
-
-.menu{
-  background:rgba(0,0,0,.15);
-  padding:16px;
-  margin-top:16px;
-}
-
-.menu-item{
-  padding:8px 0;
-  border-bottom:1px dashed rgba(255,255,255,.3);
-  font-size:14px;
-}
-
-footer{
-  background:var(--green);
-  color:#fff;
-  padding:22px 0;
-  margin-top:40px;
-  font-size:13px;
-}
-</style>
+    /* Mobile */
+    @media (max-width: 900px){
+      nav{display:none}
+      .grid{grid-template-columns: 1fr}
+      .hero{min-height: 58vh}
+      h1{font-size: 30px}
+      .brand img{height: 46px}
+    }
+  </style>
 </head>
 
 <body>
+  <header>
+    <div class="container header-inner">
+      <a class="brand" href="#top" aria-label="Caffi Ceirw home">
+        <!-- LOGO -->
+        <img src="assets/ceirwlogowm.jpg" alt="Caffi Ceirw logo">
+      </a>
 
-<header>
-  <div class="container header-inner">
-    <img src="assets/caffi-ceirw-logo.png" alt="Caffi Ceirw logo" class="logo">
-    <nav>
-      <a href="#about">About</a>
-      <a href="#menu">Menu</a>
-      <a href="#visit">Visit</a>
-    </nav>
-  </div>
-</header>
+      <nav aria-label="Primary navigation">
+        <a href="#about">About</a>
+        <a href="#menu">Menu</a>
+        <a href="#visit">Visit</a>
+      </nav>
 
-<section class="hero">
-  <div class="container">
-    <h1>Caffi Ceirw</h1>
-    <p>
-      A small, family-run café at Golden Grove (Gelli Aur) Country Park —
-      a warm place to pause after a walk, surrounded by nature.
-    </p>
-    <div class="hero-actions">
-      <a class="btn" href="#menu">Sample Menu</a>
-      <a class="btn alt" href="#visit">Visitor Info</a>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <div class="container">
-
-    <div class="image-block">
-      <img src="assets/cafe-interior.jpg" alt="Inside Caffi Ceirw café">
-      <div class="image-caption">
-        Inside Caffi Ceirw — natural light, wood, and countryside calm
+      <div class="actions">
+        <a class="btn" href="https://www.goldengrove.org.uk/caffi" target="_blank" rel="noreferrer">Official Page</a>
+        <a class="btn primary" href="#visit">Plan a Visit</a>
       </div>
     </div>
+  </header>
 
-  </div>
-</section>
-
-<section id="about" class="section">
-  <div class="container">
-    <h2>About the café</h2>
-    <p>
-      Caffi Ceirw is rooted in its surroundings — wood, greenery, and
-      a relaxed pace. We keep things simple: good coffee, homemade
-      food, and a friendly welcome for walkers, families, and dogs.
-    </p>
-
-    <div class="grid">
-      <div class="card">
-        <h3>Family-run</h3>
-        <p>Friendly, personal, and proudly local.</p>
-      </div>
-      <div class="card">
-        <h3>Country park setting</h3>
-        <p>Perfect after exploring Golden Grove.</p>
-      </div>
-      <div class="card">
-        <h3>Dog friendly</h3>
-        <p>Well-behaved dogs are welcome.</p>
+  <!-- HERO (BACKGROUND = watercolor interior) -->
+  <main id="top" class="hero" aria-label="Caffi Ceirw hero">
+    <div class="container hero-inner">
+      <div class="hero-card">
+        <div class="pill">Family-run • Country Park • Dog friendly</div>
+        <h1>Caffi Ceirw</h1>
+        <p>
+          A small, welcoming café at Golden Grove (Gelli Aur) Country Park —
+          a warm place to pause after a walk, surrounded by nature.
+        </p>
+        <div class="hero-ctas">
+          <a class="btn2 primary" href="#menu">Sample Menu</a>
+          <a class="btn2" href="#visit">Visitor Info</a>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </main>
 
-<section id="menu" class="section wood">
-  <div class="container">
-    <h2>Sample menu</h2>
+  <section id="about">
+    <div class="container">
+      <div class="section-head">
+        <h2>About</h2>
+        <p>Simple, cosy, and rooted in the outdoors — greens, wood, and a relaxed pace.</p>
+      </div>
 
-    <div class="menu">
-      <div class="menu-item">Coffee & espresso drinks</div>
-      <div class="menu-item">Tea & seasonal specials</div>
-      <div class="menu-item">Soup of the day</div>
-      <div class="menu-item">Sandwiches & light lunches</div>
-      <div class="menu-item">Homemade cakes</div>
+      <div class="grid">
+        <div class="card">
+          <h3>Family-run</h3>
+          <p>Friendly, personal service — the kind of place you’ll want to come back to.</p>
+        </div>
+        <div class="card">
+          <h3>Perfect after a walk</h3>
+          <p>Coffee, cake, and light lunches after exploring the parkland.</p>
+        </div>
+        <div class="card">
+          <h3>Dogs welcome</h3>
+          <p>Well-behaved dogs are welcome — just keep them close around other guests.</p>
+        </div>
+      </div>
     </div>
+  </section>
 
-    <p style="margin-top:12px;font-size:12px;opacity:.85">
-      Sample menu for layout only — final menu to be confirmed.
-    </p>
-  </div>
-</section>
+  <section id="menu" class="menu-strip">
+    <div class="container" style="padding: 34px 0;">
+      <div class="section-head">
+        <h2 style="color:#fff;">Menu (test layout)</h2>
+        <p style="color:rgba(255,255,255,.82);">Placeholder items for now — swap with the real menu later.</p>
+      </div>
 
-<section id="visit" class="section">
-  <div class="container">
-    <h2>Plan your visit</h2>
-    <p>
-      Located within Golden Grove (Gelli Aur) Country Park.
-      Opening times and seasonal information can be added once confirmed.
-    </p>
-  </div>
-</section>
+      <div class="menu-box">
+        <div class="menu-item">Fresh coffee & espresso drinks</div>
+        <div class="menu-item">Tea & seasonal specials</div>
+        <div class="menu-item">Soup of the day</div>
+        <div class="menu-item">Sandwiches & light lunches</div>
+        <div class="menu-item">Homemade cakes</div>
+      </div>
+    </div>
+  </section>
 
-<footer>
-  <div class="container">
-    © <span id="y"></span> Caffi Ceirw · Test website concept
-  </div>
-</footer>
+  <section id="visit">
+    <div class="container">
+      <div class="section-head">
+        <h2>Visit</h2>
+        <p>Add confirmed opening times and any seasonal notes once the client approves the content.</p>
+      </div>
 
-<script>
-document.getElementById("y").textContent = new Date().getFullYear();
-</script>
+      <div class="grid">
+        <div class="card">
+          <h3>Opening times</h3>
+          <p>Placeholder — add hours here once confirmed.</p>
+        </div>
+        <div class="card">
+          <h3>Parking</h3>
+          <p>Please ensure vehicles are removed from the premises by café closing time.</p>
+        </div>
+        <div class="card">
+          <h3>Directions</h3>
+          <p>
+            <a class="btn2 primary" target="_blank" rel="noreferrer"
+              href="https://www.google.com/maps/search/?api=1&query=Golden%20Grove%20Gelli%20Aur%20Country%20Park">
+              Open Maps
+            </a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <footer>
+    <div class="container">
+      © <span id="y"></span> Caffi Ceirw — test website concept
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
