--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Caffi Ceirw — Golden Grove (Gelli Aur)</title>
-  <meta name="description" content="Caffi Ceirw — small family-run café at Golden Grove (Gelli Aur) Country Park. Menu, reservations and functions." />
+  <meta name="description" content="Caffi Ceirw — a small family-run café at Golden Grove (Gelli Aur) Country Park. Menu, reservations and functions." />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +26,11 @@
       --radius: 18px;
       --shadow: 0 18px 50px rgba(0,0,0,.16);
       --shadowSoft: 0 10px 26px rgba(0,0,0,.10);
-      --max: 1100px;
+      --max: 1120px;
+
+      /* Increase this to show MORE of the watercolor vertically */
+      --bgZoom: contain;      /* KEY: show whole image */
+      --bgPos: top center;    /* KEY: keep roof visible */
     }
 
     *{box-sizing:border-box}
@@ -45,28 +49,36 @@
       clip:rect(0,0,0,0); white-space:nowrap; border:0;
     }
 
-    /* ===== Full-page watercolor background ===== */
+    /* ===== Full-page watercolor background (SHOW FULL IMAGE) ===== */
     body::before{
       content:"";
       position: fixed;
       inset: 0;
       z-index: -2;
+
       background-image: url("./ceirwintwatercol.jpg");
-      background-size: cover;
-      background-position: center;
+      background-size: var(--bgZoom);   /* contain shows full image */
+      background-position: var(--bgPos);/* roof kept visible */
       background-repeat: no-repeat;
-      filter: saturate(0.95) contrast(1.02) brightness(1.02);
+      background-color: var(--paper);   /* fills empty areas when using contain */
+
+      /* Gentle tune */
+      filter: saturate(0.98) contrast(1.02) brightness(1.02);
     }
     body::after{
       content:"";
       position: fixed;
       inset: 0;
       z-index: -1;
-      /* gentle wash so content is readable everywhere */
+      /* Wash overlay for readability without hiding roof detail */
       background:
-        radial-gradient(1200px circle at 20% 0%, rgba(15,43,31,.10), transparent 60%),
+        radial-gradient(1200px circle at 20% 0%, rgba(24,70,52,.10), transparent 60%),
         radial-gradient(1200px circle at 80% 40%, rgba(90,62,37,.10), transparent 60%),
-        linear-gradient(180deg, rgba(244,239,230,.78) 0%, rgba(244,239,230,.72) 45%, rgba(244,239,230,.86) 100%);
+        linear-gradient(180deg,
+          rgba(244,239,230,.66) 0%,
+          rgba(244,239,230,.58) 45%,
+          rgba(244,239,230,.74) 100%
+        );
       pointer-events:none;
     }
 
@@ -138,16 +150,16 @@
       background: linear-gradient(135deg, rgba(90,62,37,.95), rgba(63,42,24,.95));
     }
 
-    /* BIGGER logo top-right */
+    /* BIGGER logo top-right (more readable) */
     .logo img{
-      height: 110px; /* bigger again */
+      height: 140px; /* bigger again */
       width:auto;
       display:block;
-      border-radius: 16px;
+      border-radius: 18px;
       background: rgba(255,255,255,.08);
-      padding: 12px;
+      padding: 14px;
       border: 1px solid rgba(255,255,255,.14);
-      box-shadow: 0 12px 26px rgba(0,0,0,.26);
+      box-shadow: 0 14px 30px rgba(0,0,0,.28);
     }
 
     /* ===== Main layout ===== */
@@ -160,10 +172,10 @@
       padding: 18px 0 10px;
     }
 
-    /* Frosted cards over the watercolor background */
+    /* Frosted panels */
     .panel{
       border-radius: var(--radius);
-      background: rgba(255,253,248,.86);
+      background: rgba(255,253,248,.84);
       border: 1px solid rgba(90,62,37,.28);
       box-shadow: var(--shadow);
       padding: 18px;
@@ -195,12 +207,11 @@
       color: var(--green);
       letter-spacing:-.02em;
     }
-    p{margin:0}
-
     .lead{
       color: var(--muted);
       font-size: 14.5px;
-      max-width: 70ch;
+      max-width: 72ch;
+      margin:0;
     }
 
     .ctas{
@@ -219,7 +230,7 @@
       font-size: 13px;
       font-weight: 900;
       border: 1px solid rgba(15,43,31,.22);
-      background: rgba(255,255,255,.85);
+      background: rgba(255,255,255,.86);
       color: var(--green);
       transition:160ms ease;
     }
@@ -261,7 +272,7 @@
     }
     .card{
       border-radius: var(--radius);
-      background: rgba(255,255,255,.72);
+      background: rgba(255,255,255,.74);
       border: 1px solid var(--stroke);
       padding: 14px;
       box-shadow: 0 1px 0 rgba(0,0,0,.03);
@@ -272,7 +283,7 @@
       font-size: 18px;
       color: var(--brown);
     }
-    .card p{color: rgba(20,20,20,.72); font-size: 13.5px;}
+    .card p{margin:0; color: rgba(20,20,20,.72); font-size: 13.5px;}
 
     /* Wood strip menu */
     .wood-strip{
@@ -299,7 +310,7 @@
       background: rgba(0,0,0,.18);
       border: 1px solid rgba(255,255,255,.18);
       padding: 14px;
-      max-width: 860px;
+      max-width: 900px;
     }
     .menu-item{
       padding: 10px 0;
@@ -334,17 +345,19 @@
     }
 
     /* Responsive */
-    @media (max-width: 1000px){
+    @media (max-width: 1040px){
       .hero-wrap{grid-template-columns: 1fr;}
-      .logo img{height: 100px;}
+      .logo img{height: 125px;}
       .grid{grid-template-columns: 1fr;}
       .split{grid-template-columns: 1fr;}
       h1{font-size: 34px;}
+      :root{ --bgPos: top center; } /* keep roof visible */
     }
     @media (max-width: 720px){
       .toplinks{display:none;}
       .leftbrand{min-width:auto}
-      .logo img{height: 92px;}
+      .logo img{height: 112px;}
+      :root{ --bgZoom: contain; --bgPos: top center; }
     }
   </style>
 </head>
@@ -380,25 +393,26 @@
           <h1>A cosy stop in the countryside</h1>
           <p class="lead">
             Caffi Ceirw is a small, family-run café at Golden Grove (Gelli Aur) Country Park — perfect for coffee, cake and
-            light lunches after a walk, with space for community events and functions too.
+            light lunches after a walk, with space for community events and private functions too.
           </p>
 
           <div class="ctas">
-            <a class="btn2 primary" href="#menu">View sample menu</a>
-            <a class="btn2" href="#functions">Events & functions</a>
+            <a class="btn2 primary" href="#menu">Menu</a>
+            <a class="btn2" href="#reservations">Reservations</a>
+            <a class="btn2" href="#functions">Functions</a>
             <a class="btn2" href="https://www.goldengrove.org.uk/caffi" target="_blank" rel="noreferrer">Official page</a>
           </div>
         </div>
 
-        <div class="panel soft">
+        <div class="panel soft" aria-label="Highlights">
           <div class="section-head" style="margin-bottom:0">
-            <h2 style="font-size:20px; margin:0">Today at the café (test)</h2>
-            <p style="margin:0; font-size:13px">Add opening times & specials here when confirmed.</p>
+            <h2 style="font-size:20px; margin:0">Welcome</h2>
+            <p style="margin:0; font-size:13px">Coffee, cakes, light lunches — and space for events.</p>
           </div>
           <ul class="list" style="margin-top:10px">
-            <li>Fresh coffee & homemade cake</li>
-            <li>Light lunches and seasonal specials</li>
-            <li>Dog friendly after a country-park walk</li>
+            <li>Fresh coffee & homemade bakes</li>
+            <li>Relaxed seating with a bright conservatory feel</li>
+            <li>Ideal stop after exploring the country park</li>
           </ul>
         </div>
       </div>
@@ -429,16 +443,16 @@
         <div class="wood-strip">
           <div class="wood-inner">
             <div class="section-head" style="margin-bottom:8px">
-              <h2 style="color:#fff; margin:0;">Menu (test layout)</h2>
-              <p style="color:rgba(255,255,255,.82); margin:0;">Placeholder items for now — replace with the real menu later.</p>
+              <h2 style="color:#fff; margin:0;">Menu</h2>
+              <p style="color:rgba(255,255,255,.82); margin:0;">A simple overview — full menu details can be added here.</p>
             </div>
 
-            <div class="menu-box">
-              <div class="menu-item">Fresh coffee & espresso drinks</div>
+            <div class="menu-box" aria-label="Menu overview">
+              <div class="menu-item">Coffee & espresso drinks</div>
               <div class="menu-item">Tea & seasonal specials</div>
               <div class="menu-item">Soup of the day</div>
               <div class="menu-item">Sandwiches & light lunches</div>
-              <div class="menu-item">Homemade cakes</div>
+              <div class="menu-item">Homemade cakes & sweet treats</div>
             </div>
 
             <div class="menu-note">Allergens: please ask staff about allergens and dietary requirements.</div>
@@ -449,25 +463,25 @@
       <section id="reservations">
         <div class="section-head">
           <h2>Reservations</h2>
-          <p>Test site — no booking system yet. This section is ready for phone/email/form later.</p>
+          <p>Reserve a table or enquire about larger groups.</p>
         </div>
 
         <div class="split">
           <div class="card">
             <h3>Reserve a table</h3>
-            <p>Add your preferred reservation method here. For now, link customers to the official page.</p>
+            <p>For reservations, please contact us via the official page while we finalise direct booking options.</p>
             <div class="ctas" style="margin-top:12px">
-              <a class="btn2 primary" href="https://www.goldengrove.org.uk/caffi" target="_blank" rel="noreferrer">Enquire via official page</a>
+              <a class="btn2 primary" href="https://www.goldengrove.org.uk/caffi" target="_blank" rel="noreferrer">Contact us</a>
               <a class="btn2" href="#functions">Functions</a>
             </div>
           </div>
 
           <div class="card">
             <h3>Group visits</h3>
-            <p>Ideal for walking groups, clubs, or family meet-ups.</p>
+            <p>Ideal for walking groups, clubs, and family meet-ups.</p>
             <ul class="list">
               <li>Advance notice recommended for larger groups</li>
-              <li>Flexible seating</li>
+              <li>Flexible seating arrangements</li>
               <li>Seasonal planning (indoors/outdoors)</li>
             </ul>
           </div>
@@ -477,13 +491,13 @@
       <section id="functions">
         <div class="section-head">
           <h2>Functions & events</h2>
-          <p>They’ve hosted a range of community and family events — here are examples this site supports.</p>
+          <p>We welcome community events and private gatherings.</p>
         </div>
 
         <div class="grid">
           <div class="card">
             <h3>Wakes & family gatherings</h3>
-            <p>A calm, respectful space for family occasions, with flexible seating and catering options (to confirm).</p>
+            <p>A calm, respectful space for family occasions, with flexible seating.</p>
           </div>
           <div class="card">
             <h3>African food nights</h3>
@@ -497,11 +511,11 @@
 
         <div class="panel soft" style="margin-top:12px">
           <div class="section-head" style="margin-bottom:8px">
-            <h2 style="font-size:20px; margin:0">Enquiries (test)</h2>
-            <p style="margin:0; font-size:13px">Add a simple enquiry form later — for now use the official page.</p>
+            <h2 style="font-size:20px; margin:0">Enquiries</h2>
+            <p style="margin:0; font-size:13px">Get in touch to discuss dates, groups, or event ideas.</p>
           </div>
           <div class="ctas" style="margin-top:10px">
-            <a class="btn2 primary" href="https://www.goldengrove.org.uk/caffi" target="_blank" rel="noreferrer">Enquire via official page</a>
+            <a class="btn2 primary" href="https://www.goldengrove.org.uk/caffi" target="_blank" rel="noreferrer">Send an enquiry</a>
             <a class="btn2" href="#top">Back to top</a>
           </div>
         </div>
@@ -511,7 +525,7 @@
 
   <footer>
     <div class="container">
-      © <span id="y"></span> Caffi Ceirw — test website concept • Forest greens & warm wood tones
+      © <span id="y"></span> Caffi Ceirw • Golden Grove (Gelli Aur) Country Park
     </div>
   </footer>
 
